--- a/.github/workflows/meson-ci-workflow.yaml
+++ b/.github/workflows/meson-ci-workflow.yaml
@@ -17,9 +17,9 @@ jobs:
             arch: amd64
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v1
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
@@ -27,22 +27,13 @@ jobs:
         run: pip install meson ninja
 
       - name: Configure
-        shell: cmd
-        run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.bat" -no_logo -arch=${{ matrix.config.arch }}
-          meson setup build
+        run: meson setup --vsenv build
 
       - name: Build
-        shell: cmd
-        run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.bat" -no_logo -arch=${{ matrix.config.arch }}
-          ninja -C build
+        run: meson compile -C build -v
 
       - name: Test
-        shell: cmd
-        run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools\VsDevCmd.bat" -no_logo -arch=${{ matrix.config.arch }}
-          ninja -C build test
+        run: meson test -C build -v
 
   linux:
     name: Linux ${{ matrix.config.name }}
@@ -68,9 +59,9 @@ jobs:
             meson-flags: -Dbuildtype=debugoptimized -Db_lundef=false -Db_sanitize=address
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v1
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
@@ -81,7 +72,7 @@ jobs:
         run: meson setup build ${{ matrix.config.meson-flags }}
 
       - name: Build
-        run: ninja -C build
+        run: meson compile -C build -v
 
       - name: Test
-        run: ninja -C build test
+        run: meson test -C build -v
